@@ -234,6 +234,15 @@ class DLocalTest < Test::Unit::TestCase
     end.respond_with(successful_purchase_response)
   end
 
+  def test_idempotency_header
+    options = @options.merge(idempotency_key: '12345')
+    stub_comms do
+      @gateway.purchase(@amount, @credit_card, options)
+    end.check_request do |_endpoint, _data, headers|
+      assert_equal '12345', headers['X-Idempotency-Key']
+    end.respond_with(successful_purchase_response)
+  end
+
   def test_three_ds_v1_object_construction
     post = {}
     @options[:three_d_secure] = @three_ds_secure
